--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/lodash": "^4.14.172",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.172",
+    "@types/lodash-es": "^4.17.4",
     "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
