--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           node-version: 'v14.17.5'
 
+      - uses: actions/cache@v2
+        with:
+          path: ${YARN_CACHE_FOLDER}
+          key: ${{ runner.os }}-yarn-cache-v1
+      - run: yarn install
+
       - name: Install dependencies
         run: |
           yarn --frozen-lockfile
